infra/k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: mihirvir10/frontend
          ports:
            - containerPort: 5173

---
apiVersion: v1
kind: Service
metadata:
  name: srv-client
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 5173
      targetPort: 5173
